--- a/opengl2ex1/.gitignore
+++ b/opengl2ex1/.gitignore
@@ -1,6 +1,10 @@
+*.iml
 .gradle
-local.properties
-.idea/workspace.xml
-.idea/libraries
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
 .DS_Store
-build
+/build
+/captures
+.externalNativeBuild
+/.idea/caches
