--- a/OpenGL30CubeTextureView/gradle/wrapper/gradle-wrapper.properties
+++ b/OpenGL30CubeTextureView/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Feb 19 11:09:25 MST 2020
+#Mon Mar 30 10:31:47 MDT 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.4.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-5.6.4-all.zip
