--- a/HelloOpenGLES20/app/src/main/AndroidManifest.xml
+++ b/HelloOpenGLES20/app/src/main/AndroidManifest.xml
@@ -6,10 +6,10 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".OpenGLES20Activity"
-            android:label="@string/app_name" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
