--- a/opengl2ex1/app/src/main/AndroidManifest.xml
+++ b/opengl2ex1/app/src/main/AndroidManifest.xml
@@ -2,19 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.cs4730.opengl2ex1">
 
-	<!-- We require OpenGL ES 2.0 -->
-	<uses-feature
-		android:glEsVersion="0x00020000"
-		android:required="true" />
-    
+    <!-- We require OpenGL ES 2.0 -->
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
