--- a/HelloOpenGLES31/app/src/main/AndroidManifest.xml
+++ b/HelloOpenGLES31/app/src/main/AndroidManifest.xml
@@ -2,11 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.cs4730.helloopengles31">
 
-
-
     <!-- Tell the system this application requires OpenGL ES 3.1. -->
-    <uses-feature android:glEsVersion="0x00030001" android:required="true" />
-
+    <uses-feature
+        android:glEsVersion="0x00030001"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -14,7 +13,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
