--- a/OpenGL30Cube/app/src/main/AndroidManifest.xml
+++ b/OpenGL30Cube/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.cs4730.opengl30cube" >
+    package="edu.cs4730.opengl30cube">
+    <!-- Tell the system this application requires OpenGL ES 3.0. -->
+    <uses-feature
+        android:glEsVersion="0x00030000"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -8,7 +12,7 @@
         android:label="@string/app_name">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
