--- a/OpenGL30Cube/app/build.gradle
+++ b/OpenGL30Cube/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion 35
 
     defaultConfig {
         applicationId "edu.cs4730.opengl30cube"
-        minSdkVersion 26
-        targetSdkVersion 33
+        minSdkVersion 29
+        targetSdkVersion 35
         versionCode 1
         versionName "1.0"
     }
@@ -16,6 +16,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'edu.cs4730.opengl30cube'
 }
 
 dependencies {
