--- a/HelloOpenGLES30/app/build.gradle
+++ b/HelloOpenGLES30/app/build.gradle
@@ -16,6 +16,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'com.example.android.opengl30'
 }
 
 dependencies {
