fixed shader code.

--- a/HelloOpenGLES31/app/build.gradle
+++ b/HelloOpenGLES31/app/build.gradle
@@ -16,6 +16,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'edu.cs4730.helloopengles31'
 }
 
 dependencies {
