--- a/HelloOpenGLES31/app/src/main/AndroidManifest.xml
+++ b/HelloOpenGLES31/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.cs4730.helloopengles31">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Tell the system this application requires OpenGL ES 3.1. -->
     <uses-feature
